--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header">
             <h1>Sweet Treats Bakery</h1>
             <div style="display: flex; list-style: none; gap: 2rem; font-size: 1.1rem; cursor: pointer;">
-                <a href="./homr.html" >
+                <a href="index.html" >
                     <li>Home</li>
                 </a>
                 <a href="./menu.html">
