--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakery</title>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -14,7 +16,7 @@
         <div class="header">
             <h1>Sweet Treats Bakery</h1>
             <div style="display: flex; list-style: none; gap: 2rem; font-size: 1.1rem; cursor: pointer;">
-                <a href="index.html" >
+                <a href="index.html">
                     <li>Home</li>
                 </a>
                 <a href="./menu.html">
@@ -29,15 +31,20 @@
             </div>
         </div>
         <div class="poster">
-            <h1>Freshly Baked Happiness Every Day!</h1>
-            <h3>Delicious Pastries, Cakes, and Cookes made with love.</h3>
+            <!-- <h1>Freshly Baked Happiness Every Day!</h1>
+            <h3>Delicious Pastries, Cakes, and Cookes made with love.</h3> -->
         </div>
     </div>
+    <div style="text-align: center;padding: 1rem; display: flex; flex-direction: column; gap: 1rem;margin-bottom: 2rem;">
+            <h2 style="font-size: 2.1rem;">Our Delicious <span style="color: #774936;">Creations</span></h2>
+            <p style="font-size: 14px; font-style: italic;">Baked fresh daily with love and quality ingredients.</p>
+        </div>
     <div class="items">
+        
         <div class="item">
             <img src="./images/image.jpeg" alt="cupcake">
             <h2>Choclate Cupcake</h2>
-            <p >Flaky and buttery layers baked to golden perfection.</p>
+            <p>Flaky and buttery layers baked to golden perfection.</p>
             <button>Order Now</button>
         </div>
         <div class="item">
