--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <h3>Delicious Pastries, Cakes, and Cookes made with love.</h3> -->
         </div>
     </div>
-    <div style="text-align: center;padding: 1rem; display: flex; flex-direction: column; gap: 1rem;margin-bottom: 2rem;">
-            <h2 style="font-size: 1.5rem;">Our Delicious <span style="color: #774936;">Creations</span></h2>
-            <p style="font-size: 14px; font-style: italic;">Baked fresh daily with love and quality ingredients.</p>
+    <div class="title">
+            <h2 >Our Delicious <span style="color: #774936;">Creations</span></h2>
+            <p >Baked fresh daily with love and quality ingredients.</p>
         </div>
     <div class="items">
         
